--- a/OrderingSystem/MSMEOrderingWebApp/templates/MSMEOrderingWebApp/settings.html
+++ b/OrderingSystem/MSMEOrderingWebApp/templates/MSMEOrderingWebApp/settings.html
@@ -827,7 +827,7 @@
             color: var(--primary-color); /* Changes text color on hover */
         }
 
-        image-upload-container {
+        .image-upload-container {
             cursor: pointer;
         }
 
