--- a/OrderingSystem/MSMEOrderingWebApp/templates/MSMEOrderingWebApp/inventory.html
+++ b/OrderingSystem/MSMEOrderingWebApp/templates/MSMEOrderingWebApp/inventory.html
@@ -958,7 +958,13 @@
             display: none;
         }
     }
-    
+        
+    .table td,
+    .table th {
+        background-color: #f0f0f0 !important;
+        opacity: 1 !important;
+    }
+
     
     </style>
 <div>
